--- a/index.html
+++ b/index.html
@@ -5,32 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">WebStudio</a>
+    <header class="header">
+        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <nav>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="nav-list list">
+                <li><a class="nav-link link" href="index.html">Студія</a></li>
+                <li><a class="nav-link link" href="portfolio.html">Портфоліо</a></li>
+                <li><a class="nav-link link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts-list list">
+            <li><a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-btn" type="button">Замовити послугу</button>
         </section>
 
         <section>
             <h2 hidden>Наші переваги</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -52,7 +56,7 @@
 
         <section>
             <h2>Чим ми займаємося</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="Десктопні додатки" width="370" height="294"></li>
                 <li><img src="./images/about-img-2.jpg" alt="Мобільні додатки" width="370" height="294"></li>
                 <li><img src="./images/about-img-3.jpg" alt="Дизайнерські рішення" width="370" height="294"></li>
@@ -61,7 +65,7 @@
 
         <section>
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/img.jpg" alt="Член команди" width="270" height="260"> 
                     <h4>Ігор Дем'яненко</h4> 
@@ -87,16 +91,16 @@
     </main>
 
     <footer>
-        <a href="index.html">WebStudio</a>
+        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <a href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
+            <a class="link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
             target="_blank" 
             rel="noopener noreferrer nofollow">
             м. Київ, пр-т Лесі Українки, 26
             </a> 
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="list">
+                <li><a class="contactslink" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contactslink" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
