--- a/index.html
+++ b/index.html
@@ -28,34 +28,30 @@
 
     <main>
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button class="hero-btn" type="button">Замовити послугу</button>
         </section>
 
         <section>
-            <h2 hidden>Наші переваги</h2>
             <ul class="list">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="list-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="list-item-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="list-item-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="list-item-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="list-item-title">ПЛАНУВАННЯ</h3>
+                    <p class="list-item-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="list-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="list-item-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-        </section>
-
-        <section>
-            <h2>Чим ми займаємося</h2>
+             <h2 class="title">Чим ми займаємося</h2>
             <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="Десктопні додатки" width="370" height="294"></li>
                 <li><img src="./images/about-img-2.jpg" alt="Мобільні додатки" width="370" height="294"></li>
@@ -64,7 +60,7 @@
         </section>
 
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="title">Наша команда</h2>
             <ul class="list">
                 <li>
                     <img src="./images/img.jpg" alt="Член команди" width="270" height="260"> 
