--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
                 <li><a class="nav-link link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contacts-list list">
-            <li><a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts-list list">
+            <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
-        <section class="hero">
+        <section class="section-hero">
             <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button class="hero-btn" type="button">Замовити послугу</button>
         </section>
 
-        <section>
-            <ul class="list">
+        <section class="section-about">
+            <ul class="about-list list">
                 <li>
-                    <h3 class="list-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="list-item-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="list-item-title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="list-item-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3 class="list-item-title">ПЛАНУВАННЯ</h3>
-                    <p class="list-item-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="about-title">ПЛАНУВАННЯ</h3>
+                    <p class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="list-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="list-item-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
              <h2 class="title">Чим ми займаємося</h2>
@@ -59,44 +59,44 @@
             </ul>
         </section>
 
-        <section>
+        <section class="section-team">
             <h2 class="title">Наша команда</h2>
-            <ul class="list">
+            <ul class="team-list list">
                 <li>
                     <img src="./images/img.jpg" alt="Член команди" width="270" height="260"> 
-                    <h4>Ігор Дем'яненко</h4> 
-                    <p>Product Designer</p>
+                    <h4 class="team-title">Ігор Дем'яненко</h4> 
+                    <p class="team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Член команди" width="270" height="260"> 
-                    <h4>Ольга Рєпіна</h4> 
-                    <p>Frontend Developer</p>
+                    <h4 class="team-title">Ольга Рєпіна</h4> 
+                    <p class="team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Член команди" width="270" height="260"> 
-                    <h4>Микола Тарасов</h4> 
-                    <p>Marketing</p>
+                    <h4 class="team-title">Микола Тарасов</h4> 
+                    <p class="team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img4.jpg" alt="Член команди" width="270" height="260"> 
-                    <h4>Михайло Єрмаков</h4> 
-                    <p>UI Designer</p>
+                    <h4 class="team-title">Михайло Єрмаков</h4> 
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <a class="link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
+            <a class="footer-address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
             target="_blank" 
             rel="noopener noreferrer nofollow">
             м. Київ, пр-т Лесі Українки, 26
             </a> 
             <ul class="list">
-                <li><a class="contactslink" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contactslink" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="footer-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
