--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
                 <li><a class="nav-link link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contacts-list list">
-            <li><a class="e-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts-list list">
+            <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
