--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="header-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <nav>
             <ul class="nav-list list">
                 <li><a class="nav-link link" href="index.html">Студія</a></li>
@@ -32,26 +32,26 @@
             <button class="hero-btn" type="button">Замовити послугу</button>
         </section>
 
-        <section class="section-about">
-            <ul class="about-list list">
+        <section class="section-benefits">
+            <ul class="benefits-list list">
                 <li>
-                    <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3 class="about-title">ПЛАНУВАННЯ</h3>
-                    <p class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+                    <p class="abenefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-             <h2 class="title">Чим ми займаємося</h2>
+             <h2 class="benefits-main-title">Чим ми займаємося</h2>
             <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="Десктопні додатки" width="370" height="294"></li>
                 <li><img src="./images/about-img-2.jpg" alt="Мобільні додатки" width="370" height="294"></li>
@@ -60,7 +60,7 @@
         </section>
 
         <section class="section-team">
-            <h2 class="title">Наша команда</h2>
+            <h2 class="team-main-title">Наша команда</h2>
             <ul class="team-list list">
                 <li>
                     <img src="./images/img.jpg" alt="Член команди" width="270" height="260"> 
@@ -87,7 +87,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="footer-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
             <a class="footer-address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
             target="_blank" 
