--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="header-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <nav>
             <ul class="nav-list list">
                 <li><a class="nav-link link" href="index.html">Студія</a></li>
@@ -27,77 +27,77 @@
     </header>
 
     <main>
-        <section>
+        <section class="section-portfolio">
             <h1 hidden>Наші роботи</h1>
-            <ul class="list">
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="filter-list list">
+                <li><button class="filter-btn" type="button">Усі</button></li>
+                <li><button class="filter-btn" type="button">Веб-сайти</button></li>
+                <li><button class="filter-btn" type="button">Додатки</button></li>
+                <li><button class="filter-btn" type="button">Дизайн</button></li>
+                <li><button class="filter-btn" type="button">Маркетинг</button></li>
             </ul>
-            <ul class="list">
+            <ul class="portfolio-list list">
                 <li>
-                    <img src="./images/img-portfolio-1.jpg" alt="Приклад роботи">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <img src="./images/img-portfolio-1.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-2.jpg" alt="Приклад роботи">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/img-portfolio-2.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-3.jpg" alt="Приклад роботи">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <img src="./images/img-portfolio-3.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Проєкт Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-5.jpg" alt="Приклад роботи">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                    <img src="./images/img-portfolio-5.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Проєкт Boxes</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-6.jpg" alt="Приклад роботи">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <img src="./images/img-portfolio-6.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-7.jpg" alt="Приклад роботи">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/img-portfolio-7.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Видання Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-8.jpg" alt="Приклад роботи">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/img-portfolio-8.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Проєкт LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/img-portfolio-9.jpg" alt="Приклад роботи">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <img src="./images/img-portfolio-9.jpg" alt="Приклад роботи" width="370" height="294">
+                    <h2 class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
             </ul>
 
         </section>
     </main>
 
-    <footer>
-        <a class="logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
+    <footer class="footer">
+        <a class="footer-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <a class="link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
+            <a class="footer-address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
             target="_blank" 
             rel="noopener noreferrer nofollow">
             м. Київ, пр-т Лесі Українки, 26
-            </a>   
+            </a> 
             <ul class="list">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="footer-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
