--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,6 +33,7 @@
         </section>
 
         <section class="section-benefits">
+            <h2 class="benefits-main-title">Наші переваги</h2>
             <ul class="benefits-list list">
                 <li>
                     <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -51,7 +52,10 @@
                     <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-             <h2 class="benefits-main-title">Чим ми займаємося</h2>
+        </section>
+ 
+        <section class="section-about">  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+             <h2 class="about-main-title">Чим ми займаємося</h2>
             <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="Десктопні додатки" width="370" height="294"></li>
                 <li><img src="./images/about-img-2.jpg" alt="Мобільні додатки" width="370" height="294"></li>
@@ -62,22 +66,22 @@
         <section class="section-team">
             <h2 class="team-main-title">Наша команда</h2>
             <ul class="team-list list">
-                <li>
+                <li class="team-item">
                     <img src="./images/img.jpg" alt="Член команди" width="270" height="260"> 
                     <h4 class="team-title">Ігор Дем'яненко</h4> 
                     <p class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img2.jpg" alt="Член команди" width="270" height="260"> 
                     <h4 class="team-title">Ольга Рєпіна</h4> 
                     <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img3.jpg" alt="Член команди" width="270" height="260"> 
                     <h4 class="team-title">Микола Тарасов</h4> 
                     <p class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img4.jpg" alt="Член команди" width="270" height="260"> 
                     <h4 class="team-title">Михайло Єрмаков</h4> 
                     <p class="team-text">UI Designer</p>
@@ -89,12 +93,12 @@
     <footer class="footer">
         <a class="footer-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <a class="footer-address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
-            target="_blank" 
-            rel="noopener noreferrer nofollow">
-            м. Київ, пр-т Лесі Українки, 26
-            </a> 
             <ul class="list">
+                <li> <a class="footer-contacts address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
+                    target="_blank" 
+                    rel="noopener noreferrer nofollow">
+                    м. Київ, пр-т Лесі Українки, 26
+                    </a> </li>
                 <li><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="footer-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
