--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,50 +37,66 @@
                 <li><button class="filter-btn" type="button">Маркетинг</button></li>
             </ul>
             <ul class="portfolio-list list">
-                <li>
+                <li> <a href="">
                     <img src="./images/img-portfolio-1.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Технокряк</h2>
                     <p class="portfolio-text">Веб-сайт</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href=""> 
                     <img src="./images/img-portfolio-2.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-text">Дизайн</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href=""> 
                     <img src="./images/img-portfolio-3.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="portfolio-text">Додаток</p>
+                </a>
                 </li>
-                <li>
-                    <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи" width="370" height="294">
+
+                <li> <a href=""> <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Prime</h2>
                     <p class="portfolio-text">Маркетинг</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href="">
                     <img src="./images/img-portfolio-5.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Boxes</h2>
                     <p class="portfolio-text">Додаток</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href="">
                     <img src="./images/img-portfolio-6.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="portfolio-text">Веб-сайт</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href="">
                     <img src="./images/img-portfolio-7.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Видання Limited Edition</h2>
                     <p class="portfolio-text">Дизайн</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href="">
                     <img src="./images/img-portfolio-8.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт LAB</h2>
                     <p class="portfolio-text">Маркетинг</p>
+                </a>
                 </li>
-                <li>
+
+                <li> <a href="">
                     <img src="./images/img-portfolio-9.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="portfolio-text">Додаток</p>
+                </a>
                 </li>
             </ul>
 
@@ -90,12 +106,12 @@
     <footer class="footer">
         <a class="footer-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <address>
-            <a class="footer-address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
-            target="_blank" 
-            rel="noopener noreferrer nofollow">
-            м. Київ, пр-т Лесі Українки, 26
-            </a> 
             <ul class="list">
+                <li> <a class="footer-contacts address link" href="https://goo.gl/maps/38y7UQBGhoWMTXsQ7" 
+                    target="_blank" 
+                    rel="noopener noreferrer nofollow">
+                    м. Київ, пр-т Лесі Українки, 26
+                    </a> </li>
                 <li><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="footer-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
