--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 
     <main>
         <section class="section-portfolio">
-            <h1 hidden>Наші роботи</h1>
+            <h1 class="portfolio-main-title">Наші роботи</h1>
             <ul class="filter-list list">
                 <li><button class="filter-btn" type="button">Усі</button></li>
                 <li><button class="filter-btn" type="button">Веб-сайти</button></li>
@@ -37,62 +37,62 @@
                 <li><button class="filter-btn" type="button">Маркетинг</button></li>
             </ul>
             <ul class="portfolio-list list">
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-1.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Технокряк</h2>
                     <p class="portfolio-text">Веб-сайт</p>
                 </a>
                 </li>
 
-                <li> <a href=""> 
+                <li> <a class="link" href=""> 
                     <img src="./images/img-portfolio-2.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-text">Дизайн</p>
                 </a>
                 </li>
 
-                <li> <a href=""> 
+                <li> <a class="link" href=""> 
                     <img src="./images/img-portfolio-3.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="portfolio-text">Додаток</p>
                 </a>
                 </li>
 
-                <li> <a href=""> <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи" width="370" height="294">
+                <li> <a class="link" href=""> <img src="./images/img-portfolio-4.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Prime</h2>
                     <p class="portfolio-text">Маркетинг</p>
                 </a>
                 </li>
 
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-5.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Boxes</h2>
                     <p class="portfolio-text">Додаток</p>
                 </a>
                 </li>
 
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-6.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="portfolio-text">Веб-сайт</p>
                 </a>
                 </li>
 
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-7.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Видання Limited Edition</h2>
                     <p class="portfolio-text">Дизайн</p>
                 </a>
                 </li>
 
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-8.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт LAB</h2>
                     <p class="portfolio-text">Маркетинг</p>
                 </a>
                 </li>
 
-                <li> <a href="">
+                <li> <a class="link" href="">
                     <img src="./images/img-portfolio-9.jpg" alt="Приклад роботи" width="370" height="294">
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="portfolio-text">Додаток</p>
