--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="header-logo link" href="index.html"><span class="logo-part">Web</span>Studio</a>
         <nav>
             <ul class="nav-list list">
-                <li><a class="nav-link link" href="index.html">Студія</a></li>
+                <li><a class="nav-link link current" href="index.html">Студія</a></li>
                 <li><a class="nav-link link" href="portfolio.html">Портфоліо</a></li>
                 <li><a class="nav-link link" href="">Контакти</a></li>
             </ul>
@@ -33,7 +33,7 @@
         </section>
 
         <section class="section-benefits">
-            <h2 class="benefits-main-title">Наші переваги</h2>
+            <h2 class="visually-hidden">Наші переваги</h2>
             <ul class="benefits-list list">
                 <li>
                     <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -54,7 +54,7 @@
             </ul>
         </section>
  
-        <section class="section-about">  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+        <section class="section-about"> 
              <h2 class="about-main-title">Чим ми займаємося</h2>
             <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="Десктопні додатки" width="370" height="294"></li>
