--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="nav-list list">
                 <li><a class="nav-link link" href="index.html">Студія</a></li>
-                <li><a class="nav-link link" href="portfolio.html">Портфоліо</a></li>
+                <li><a class="nav-link link current" href="portfolio.html">Портфоліо</a></li>
                 <li><a class="nav-link link" href="">Контакти</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
 
     <main>
         <section class="section-portfolio">
-            <h1 class="portfolio-main-title">Наші роботи</h1>
+            <h1 class="visually-hidden">Наші роботи</h1>
             <ul class="filter-list list">
                 <li><button class="filter-btn" type="button">Усі</button></li>
                 <li><button class="filter-btn" type="button">Веб-сайти</button></li>
